--- a/config.json
+++ b/config.json
@@ -1,16 +1,16 @@
 {
-  env: 'prod',
-  prefix: '?',
-  ownerID: '333769079569776642',
-  guildID: '434382006575431690',
-  channelGeneral: '434384554091085832',
-  channelBotLog: '488776821782085632',
-  channelGuides: '500997369337479178',
-  roleWarlord: '434382172606955522',
-  roleGeneral: '434389537826013186',
-  roleOfficer: '488133427321634826',
-  roleSergeant: '488133274699300886',
-  roleSoldier: '434393086869635074',
-  roleInitiate: '488685606868746252',
-  roleGuest: '452098650529857537'
+  'env': 'prod',
+  'prefix': '?',
+  'ownerID': '333769079569776642',
+  'guildID': '434382006575431690',
+  'channelGeneral': '434384554091085832',
+  'channelBotLog': '488776821782085632',
+  'channelGuides': '500997369337479178',
+  'roleWarlord': '434382172606955522',
+  'roleGeneral': '434389537826013186',
+  'roleOfficer': '488133427321634826',
+  'roleSergeant': '488133274699300886',
+  'roleSoldier': '434393086869635074',
+  'roleInitiate': '488685606868746252',
+  'roleGuest': '452098650529857537'
 }
