--- a/config.json
+++ b/config.json
@@ -5,6 +5,7 @@
   "guildID": "434382006575431690",
   "channelGeneral": "434384554091085832",
   "channelBotLog": "488776821782085632",
+  "channelRules":"434384191820398593",
   "channelGuides": "500997369337479178",
   "roleWarlord": "434382172606955522",
   "roleGeneral": "434389537826013186",
