--- a/config.json
+++ b/config.json
@@ -7,6 +7,7 @@
   "channelBotLog": "488776821782085632",
   "channelRules":"434384191820398593",
   "channelGuides": "500997369337479178",
+  "vaultUpdateTime": "10.10.2018",
   "roleWarlord": "434382172606955522",
   "roleGeneral": "434389537826013186",
   "roleOfficer": "488133427321634826",
