--- a/config.json
+++ b/config.json
@@ -4,6 +4,7 @@
   "ownerID": "333769079569776642",
   "guildID": "434382006575431690",
   "channelGeneral": "434384554091085832",
+  "channelAnnouncements":"486666027548016657",
   "channelBotLog": "488776821782085632",
   "channelRules":"434384191820398593",
   "channelGuides": "500997369337479178",
